--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="app">
-        <div class="screen join-screen">
+        <div class="screen join-screen active">
             <div class="form">
                 <h2>Share your files securely</h2>
                 <div class="form-input">
@@ -20,7 +20,7 @@
                 </div>
             </div>
         </div>
-        <div class="screen fs-screen active ">
+        <div class="screen fs-screen  ">
             <div class="file-input">
                 <label for="file-input">Click here to select fles for sharing</label>
                 <input type="file" id="file-input">
